fix( layouts ): change default layout to fix overflow horizontal

--- a/css/layouts/default.css
+++ b/css/layouts/default.css
@@ -1,6 +1,6 @@
 .layout#default {
 
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 
 }
